--- a/web_application/src/admin.html
+++ b/web_application/src/admin.html
@@ -8,12 +8,16 @@
     <meta name="author" content="">
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin=" anonymous"></script>
+    <script type="text/javascript">
+
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/service-agent.js"></script>
 
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Minecraft Servers Co</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -67,11 +71,17 @@
                     </table>
 
                     <h3>Create a new server</h3>
-                    <form onSubmit="javascript:createServer()">
+                    <form>
                         <label>Server Name:</label>
                         <input type="text" id="server-name" placeholder="Your minecraft server name" />
-                        <br /><button type="submit">Create!</button>
+                        <br /><button type="button" onClick="javascript:createServer()">Create!</button>
                     </form>
+                    <div id="loader">
+                        <script type="text/javascript">
+                            var spinner = new Spinner().spin();
+                            $('#loader').append(spinner.el);
+                        </script>
+                    </div>
                     <script type="text/javascript">
                         $(document).ready(() => {
                             loadServerTable(true);
